Remove type from literal & add unit test
